--- a/web/index.html
+++ b/web/index.html
@@ -27,6 +27,10 @@
     <link rel="apple-touch-icon" href="icons/Icon-192.png" />
 
     <meta name="mobile-web-app-capable" content="yes" />
+    <meta
+      http-equiv="Permissions-Policy"
+      content="interest-cohort=(), browsing-topics=(), private-state-token-issuance=(), private-state-token-redemption=()"
+    />
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="favicon.png" />
